# agorai_package

./: .gitignore  BACKEND_MIGRATION_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  PYPI_UPLOAD_GUIDE.md  QUICK_START.md  README.md  ROBUSTNESS_FILE_CHANGES.md  ROBUSTNESS_IMPLEMENTATION_SUMMARY.md  ROBUSTNESS_IMPROVEMENTS.md  ROBUSTNESS_QUICK_START.md  STRUCTURED_SYNTHESIS_SUMMARY.md  pyproject.toml  setup.py  test_robustness.py
config/: counterfactual_testing_config.yaml
docs/: README.md  STRUCTURED_SYNTHESIS.md  aggregate.md
docs/advanced/: extending.md  queue_processing.md  visualization.md
docs/applications/: automatic_council.md  bias_mitigation.md  counterfactual_testing.md
docs/core/: aggregation.md  aliases.md  properties.md
docs/reference/: api.md  configuration.md
examples/: automated_counterfactual_testing_demo.py  automatic_council_demo.py  backend_integration.py  structured_synthesis_demo.py
src/agorai/: __init__.py  config.py  logging_config.py
src/agorai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agorai/aggregate/: ALIASES_README.md  __init__.py  alias_loader.py  aliases.yaml  core.py  methods.py  property_analysis.py
src/agorai/bias/: __init__.py  contexts.py  core.py
src/agorai/synthesis/: __init__.py  automatic_council.py  circuit_breaker.py  core.py  metrics.py  providers.py  validation.py
src/agorai/testing/: __init__.py  automated_counterfactual_testing.py  counterfactual_generator.py  protected_attribute_detector.py  protected_attribute_schema.py
tests/: test_structured_synthesis.py  test_validation.py
